--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -12,3 +12,8 @@ jobs:
         run: |
           pwd
           ls
+      - name: checkout code
+        uses: actions/checkout@v3
+      - name: Listing contents after checkout
+        run: |
+          ls
