--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -1,20 +1,19 @@
-name: job-dependency
-on: [push]
+name: Environment variables
+on: push
+
 jobs:
-  checkout-job:
+  environment-variables:
     runs-on: ubuntu-latest
     steps:
-      - name: Stimulate Checkout
-        run: echo checking out
-  install-packages-job:
-    runs-on: ubuntu-latest
-    needs: ["checkout-job"]
-    steps:
-      - name: Stimulate install packages
-        run: echo installing packages  
-  run-test-job:
-    runs-on: ubuntu-latest
-    needs: ["install-packages-job"]
-    steps: 
-      - name: Stimulate test
-        run: echo running test
+      - name: print default environment variables
+        run: |
+          echo "HOME: ${HOME}"
+          echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
+          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
+          echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME}"
+          echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
+          echo "GITHUB_SHA: ${GITHUB_SHA}"
+          echo "GITHUB_REF: ${GITHUB_REF}"
+          echo "GITHUB_ACTION: ${GITHUB_ACTION}"
+          echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
+          echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
