--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -1,19 +1,31 @@
 name: Environment variables
 on: push
+env:
+  WF_ENV: This is env variables scoped at workflow level
 
 jobs:
-  environment-variables:
+  custom-env:
+    runs-on: ubuntu-latest
+    env:
+      JOB_ENV: This is env variable scoped at job level
+    steps:
+      - name: step 1 in custom-env job
+        env:
+          STEP_ENV: This is environment variable scoped at step level
+        run: |
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
+      - name: step 2
+        run: |
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
+  custom-env-2:
     runs-on: ubuntu-latest
     steps:
-      - name: print default environment variables
+      - name: step 1 in custom-env-2 job
         run: |
-          echo "HOME: ${HOME}"
-          echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
-          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
-          echo "GITHUB_EVENT_NAME: ${GITHUB_EVENT_NAME}"
-          echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
-          echo "GITHUB_SHA: ${GITHUB_SHA}"
-          echo "GITHUB_REF: ${GITHUB_REF}"
-          echo "GITHUB_ACTION: ${GITHUB_ACTION}"
-          echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
-          echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
+          echo "WF_ENV: ${WF_ENV}"
+          echo "JOB_ENV: ${JOB_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
